final testimonial draft completed

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -452,7 +452,7 @@
             <h2 class="section-sub-heading">
               Don't just take our word for it.
             </h2>
-            <div class="reviews grid grid--2-columns grid--center-v">
+            <div class="reviews">
               <figure class="testimonial">
                 <blockquote class="testimonial-quote">
                   "As a manager, PyWebDev helps me show my team new packages and
@@ -528,13 +528,78 @@
             </div>
           </div>
           <div class="gallery">
-            <!-- ROW 1 -->
-            <!-- 
-            <img
-              src="../images/community-members/team-member-5.jpg"
-              alt="team member"
-            />
-             -->
+            <figure class="gallery-image">
+              <img
+                src="../images/community-members/team-member-1.jpg"
+                alt="team member"
+              />
+            </figure>
+            <figure class="gallery-image">
+              <img
+                src="../images/community-members/team-member-1.jpg"
+                alt="team member"
+              />
+            </figure>
+            <figure class="gallery-image">
+              <img
+                src="../images/community-members/team-member-1.jpg"
+                alt="team member"
+              />
+            </figure>
+            <figure class="gallery-image">
+              <img
+                src="../images/community-members/team-member-1.jpg"
+                alt="team member"
+              />
+            </figure>
+            <figure class="gallery-image">
+              <img
+                src="../images/community-members/team-member-1.jpg"
+                alt="team member"
+              />
+            </figure>
+            <figure class="gallery-image">
+              <img
+                src="../images/community-members/team-member-1.jpg"
+                alt="team member"
+              />
+            </figure>
+            <figure class="gallery-image">
+              <img
+                src="../images/community-members/team-member-1.jpg"
+                alt="team member"
+              />
+            </figure>
+            <figure class="gallery-image">
+              <img
+                src="../images/community-members/team-member-1.jpg"
+                alt="team member"
+              />
+            </figure>
+            <figure class="gallery-image">
+              <img
+                src="../images/community-members/team-member-1.jpg"
+                alt="team member"
+              />
+            </figure>
+            <figure class="gallery-image">
+              <img
+                src="../images/community-members/team-member-1.jpg"
+                alt="team member"
+              />
+            </figure>
+            <figure class="gallery-image">
+              <img
+                src="../images/community-members/team-member-1.jpg"
+                alt="team member"
+              />
+            </figure>
+            <figure class="gallery-image">
+              <img
+                src="../images/community-members/team-member-1.jpg"
+                alt="team member"
+              />
+            </figure>
           </div>
         </div>
       </section>
