--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -446,7 +446,7 @@
       </section>
 
       <section class="section-testimonial">
-        <div class="testimonial-container grid grid--2-columns">
+        <div class="testimonial-container">
           <div class="all-testimonials">
             <span class="section-heading">Success Stories</span>
             <h2 class="section-sub-heading">
@@ -600,6 +600,71 @@
                 alt="team member"
               />
             </figure>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-prices">
+        <div class="container">
+          <span class="section-heading">Subscription Plans</span>
+          <h2 class="section-sub-heading">Pick the right plan for you.</h2>
+        </div>
+        <div class="container grid grid--2-columns">
+          <div class="membership-card">
+            <header class="membership-header">
+              <p class="membership-name">Community Member</p>
+              <p class="membership-price"><span>$</span>5</p>
+              <p class="membership-text">per month</p>
+            </header>
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon name="checkmark-outline" class="list-icon"></ion-icon>
+                <span>Monthly webinar access.</span>
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark-outline" class="list-icon"></ion-icon>
+                <span>Free monthly webinar access.</span>
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark-outline" class="list-icon"></ion-icon>
+                <span>Free monthly webinar access.</span>
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark-outline" class="list-icon"></ion-icon>
+                <span>Free monthly webinar access.</span>
+              </li>
+            </ul>
+            <a role="button" class="button button-big" href="#"
+              >Join our Community</a
+            >
+          </div>
+          <div class="membership-card">
+            <header class="membership-header">
+              <p class="membership-name">Community Member <span>Pro</span></p>
+              <p class="membership-price"><span>$</span>8</p>
+              <p class="membership-text">per month</p>
+            </header>
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon name="checkmark-outline" class="list-icon"></ion-icon>
+                <span>Monthly webinar access.</span>
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark-outline" class="list-icon"></ion-icon>
+                <span>Free monthly webinar access.</span>
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark-outline" class="list-icon"></ion-icon>
+                <span>Free monthly webinar access.</span>
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark-outline" class="list-icon"></ion-icon>
+                <span>Free monthly webinar access.</span>
+              </li>
+            </ul>
+            <a role="button" class="button button-big" href="#"
+              >Join our Community</a
+            >
           </div>
         </div>
       </section>
