building membership features section

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -98,7 +98,7 @@
                 />
               </div>
               <div class="community-text">
-                <p><span> 5,000+ </span> active members and growing!</p>
+                <p><span> 100+ </span> active members and growing!</p>
               </div>
             </div>
           </div>
@@ -613,10 +613,40 @@
             Pick the right plan for you.
           </h2>
         </div>
-        <div class="container grid grid--2-columns">
-          <div class="membership-card member-card--starter">
+        <div class="container grid grid--3-columns">
+          <div class="membership-card membership-card--starter">
             <header class="membership-header">
               <p class="membership-name">Community Member</p>
+              <p class="membership-price"><span>$</span>0</p>
+              <p class="membership-text">per month</p>
+            </header>
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon name="checkmark-outline" class="list-icon"></ion-icon>
+                <span>Monthly webinar access.</span>
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark-outline" class="list-icon"></ion-icon>
+                <span>Free monthly webinar access.</span>
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark-outline" class="list-icon"></ion-icon>
+                <span>Free monthly webinar access.</span>
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark-outline" class="list-icon"></ion-icon>
+                <span>Free monthly webinar access.</span>
+              </li>
+            </ul>
+            <div class="membership-sign-up">
+              <a role="button" class="button button-big" href="#"
+                >Join our Community</a
+              >
+            </div>
+          </div>
+          <div class="membership-card membership-card--middle">
+            <header class="membership-header">
+              <p class="membership-name">Community Member Basic</p>
               <p class="membership-price"><span>$</span>5</p>
               <p class="membership-text">per month</p>
             </header>
@@ -673,6 +703,29 @@
                 >Join our Community</a
               >
             </div>
+          </div>
+        </div>
+        <div class="container grid grid--4-columns">
+          <div class="membership-features">
+            <div class="feature-title">
+              <i class="nav-icon ph-users-three-light feature-icon"></i>
+              <p><span> 100+ </span> active members and growing!</p>
+            </div>
+          </div>
+          <div class="membership-features">
+            <div class="feature-rating">
+              <ion-icon name="star"></ion-icon>
+              <ion-icon name="star"></ion-icon>
+              <ion-icon name="star"></ion-icon>
+              <ion-icon name="star"></ion-icon>
+              <ion-icon name="star-half"></ion-icon>
+            </div>
+          </div>
+          <div class="membership-features">
+            <ion-icon name="trending-up"></ion-icon>
+          </div>
+          <div class="membership-features">
+            <ion-icon name="ribbon"></ion-icon>
           </div>
         </div>
       </section>
