final draft for Membership section

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -286,8 +286,12 @@
 
       <section class="section-courses">
         <div class="container">
-          <span class="section-heading">Courses</span>
-          <h2 class="section-sub-heading">Start learning today!</h2>
+          <span class="section-heading section-heading-dark-background"
+            >Courses</span
+          >
+          <h2 class="section-sub-heading section-sub-heading-dark-background">
+            Start learning today!
+          </h2>
         </div>
         <div class="container grid grid--3-columns">
           <div class="course">
@@ -705,27 +709,33 @@
             </div>
           </div>
         </div>
+        <!-- MEMBERSHIP FEATURES -->
         <div class="container grid grid--4-columns">
           <div class="membership-features">
             <div class="feature-title">
-              <i class="nav-icon ph-users-three-light feature-icon"></i>
-              <p><span> 100+ </span> active members and growing!</p>
+              <ion-icon name="people" class="feature-icon"></ion-icon>
+              <p class="feature-text">
+                <span> 100+ </span> active members and growing!
+              </p>
             </div>
           </div>
           <div class="membership-features">
-            <div class="feature-rating">
-              <ion-icon name="star"></ion-icon>
-              <ion-icon name="star"></ion-icon>
-              <ion-icon name="star"></ion-icon>
-              <ion-icon name="star"></ion-icon>
-              <ion-icon name="star-half"></ion-icon>
+            <div>
+              <ion-icon name="star" class="feature-icon"></ion-icon>
+              <ion-icon name="star" class="feature-icon"></ion-icon>
+              <ion-icon name="star" class="feature-icon"></ion-icon>
+              <ion-icon name="star" class="feature-icon"></ion-icon>
+              <ion-icon name="star-half" class="feature-icon"></ion-icon>
             </div>
+            <p class="feature-text">Trusted by more than 500+ learners!</p>
           </div>
           <div class="membership-features">
-            <ion-icon name="trending-up"></ion-icon>
+            <ion-icon name="logo-discord" class="feature-icon"></ion-icon>
+            <p class="feature-text">Access to the PyWebDev Discord Channel!</p>
           </div>
           <div class="membership-features">
-            <ion-icon name="ribbon"></ion-icon>
+            <ion-icon name="ribbon" class="feature-icon"></ion-icon>
+            <p class="feature-text">Earn a Certificate upon completion</p>
           </div>
         </div>
       </section>
