cta framework completed

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -739,6 +739,51 @@
           </div>
         </div>
       </section>
+
+      <!-- CTA SECTION  -->
+      <section class="section-cta">
+        <div class="container">
+          <div class="cta--container">
+            <div class="cta-text-box">
+              <h2 class="step-heading">
+                Get the AllThingsWebDev MkDoc for free!
+              </h2>
+              <p class="step-description">
+                Sign up today and receive the official AllThingsWebDev MkDoc!
+              </p>
+
+              <form action="#" class="cta-form">
+                <div>
+                  <label for="full-name">Name</label>
+                  <input type="text" name="" id="full-name" required />
+                </div>
+                <div>
+                  <label for="email">Email</label>
+                  <input type="email" name="" id="email" required />
+                </div>
+                <div>
+                  <label for="select-where"
+                    >How did you hear about PyWebDev?</label
+                  >
+                  <select name="" id="select-where" required>
+                    <option value="GitHub">Please select an option:</option>
+                    <option value="GitHub">GitHub</option>
+                    <option value="DataCamp">DataCamp</option>
+                    <option value="YouTube">YouTube</option>
+                    <option value="CodePen">CodePen</option>
+                  </select>
+                </div>
+                <button>Sign Up Now!</button>
+              </form>
+            </div>
+            <div
+              class="cta-image-box"
+              role="img"
+              aria-label="python code on an IDE."
+            ></div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
