completed cta section first draft

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -740,7 +740,7 @@
         </div>
       </section>
 
-      <!-- CTA SECTION  -->
+      <!-- CTA SECTION: Form  -->
       <section class="section-cta">
         <div class="container">
           <div class="cta--container">
@@ -754,7 +754,7 @@
 
               <form action="#" class="cta-form">
                 <div>
-                  <label for="full-name">Name</label>
+                  <label for="full-name">Full Name</label>
                   <input type="text" name="" id="full-name" required />
                 </div>
                 <div>
@@ -773,7 +773,7 @@
                     <option value="CodePen">CodePen</option>
                   </select>
                 </div>
-                <button>Sign Up Now!</button>
+                <button class="button">Sign Up Now!</button>
               </form>
             </div>
             <div
