completed first draft of index dot html

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -804,18 +804,25 @@
 
             <ul class="footer-social-links">
               <li>
-                <ion-icon name="mail-outline"> </ion-icon>
+                <ion-icon name="mail-outline" class="footer-social-icon">
+                </ion-icon>
                 <a href="mailTo:Community@PyWebDev.org">
                   Community@PyWebDev.org</a
                 >
               </li>
               <li>
-                <ion-icon name="logo-twitter"></ion-icon>
-                <p>@PyWebDevCommunity</p>
+                <ion-icon
+                  name="logo-twitter"
+                  class="footer-social-icon"
+                ></ion-icon>
+                <a>@PyWebDevCommunity</a>
               </li>
               <li>
-                <ion-icon name="location-outline"></ion-icon>
-                <p>P. Sherman, 42 Wallaby Way, Sydney</p>
+                <ion-icon
+                  name="location-outline"
+                  class="footer-social-icon"
+                ></ion-icon>
+                <a>P. Sherman, 42 Wallaby Way, Sydney</a>
               </li>
             </ul>
           </div>
