--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="header container">
       <a href="#">
         <p id="navbar-logo-text">PyWebDev</p>
       </a>
