repsonsivenes for tablets with navbar transition

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <header class="header container">
+    <header class="header container nav-open">
       <a href="#">
         <p id="navbar-logo-text">PyWebDev</p>
       </a>
@@ -53,6 +53,10 @@
           </li>
         </ul>
       </nav>
+      <button class="button-mobile-nav">
+        <ion-icon name="menu" class="icon-mobile-nav"></ion-icon>
+        <ion-icon name="close" class="icon-mobile-nav"></ion-icon>
+      </button>
     </header>
 
     <!-- This section is for non-repeating sections of our webpage.  -->
