--- a/Projects/GridArtist/index.html
+++ b/Projects/GridArtist/index.html
@@ -13,6 +13,22 @@
     <title>Grid Artist DEMO</title>
   </head>
   <body>
+    <header class="navbar-header">
+      <div class="left">Foo Bar</div>
+      <nav class="right">
+        <a href="">Work</a>
+        <a href="">Contact</a>
+        <a href="">
+          <img src="./images/dribble_icon.png" alt="" />
+        </a>
+        <a href="">
+          <img src="./images/insta_icon.png" alt="" />
+        </a>
+        <a href="">
+          <img src="./images/v_icon.png" alt="" />
+        </a>
+      </nav>
+    </header>
     <div class="project-grid">
       <div class="project" id="eth">
         <img src="images/eth.avif" alt="" />
