Notes: JavaScript modal window notes

--- a/Projects/ModalWindow/index.html
+++ b/Projects/ModalWindow/index.html
@@ -12,7 +12,7 @@
     <button class="show-modal">Show modal 1</button>
     <button class="show-modal">Show modal 2</button>
     <button class="show-modal">Show modal 3</button>
-
+    <!-- By default, the modal starts off hidden -->
     <div class="modal hidden">
       <button class="close-modal">&times;</button>
       <h1>I'm a modal window 😍</h1>
@@ -26,6 +26,8 @@
         mollit anim id est laborum.
       </p>
     </div>
+    <!-- By default, the overlay background starts off hidden -->
+    <!-- Dark blurry background  -->
     <div class="overlay hidden"></div>
 
     <script src="script.js"></script>
